<resources>
    <string name="app_name">Court Counter App</string>
    <string name="action_settings">Settings</string>
    <string name="chicago_bulls">Chicago Bulls</string>
    <string name="_0">0</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="_1_free_throw">+1 Free throw</string>
    <string name="submit_score">Submit Score</string>
    <string name="reset">Reset</string>
    <string name="boston_celtics">Boston Celtics</string>
</resources>

